[Fix] -> Spacing and popup patches.

--- a/inc/assets/css/astra-admin.css
+++ b/inc/assets/css/astra-admin.css
@@ -65,6 +65,9 @@
 	padding-bottom: 15px
 }
 
+.ast-field-settings-modal label {
+	font-size: 0;
+}
 
 .customize-control .customize-inside-control-row {
 	padding-top: 0;
