--- a/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
+++ b/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
@@ -17,7 +17,7 @@
 	    display: block;
 	    text-align: center;
 		line-height: 2;
-		border: 1px solid #a4afb7;
+		border: 1px solid #dddddd;
 		background-color: #ffffff;
 		border-radius: 0 3px 3px 0;
 
@@ -86,7 +86,7 @@
 					padding: 4px 0;
 					width: 100%;
 					height: 28px;
-					border: 1px solid #a4afb7;
+					border: 1px solid #dddddd;
 					border-right-width: 0;
 					box-shadow: none;
 					padding-left: 11px;
@@ -122,7 +122,7 @@
 					height: 26px;
 					line-height: 26px;
 					font-size: 14px;
-					border: 1px solid #a4afb7;
+					border: 1px solid #dddddd;
 					background-color: #ffffff;
 					border-radius: 3px 0 0 3px;
 					border-right-width: 0;
